[package]
name = "brotli-sys"
version = "0.3.2"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/brotli2-rs"
homepage = "https://github.com/alexcrichton/brotli2-rs"
documentation = "https://docs.rs/brotli-sys"
description = """
Raw bindings to libbrotli
"""
categories = ["external-ffi-bindings"]

[dependencies]
libc = "0.2"
